--- a/index.html
+++ b/index.html
@@ -19,15 +19,30 @@
                     <span class="overlay"></span>
 
                     <div class="card-image">
+                        <img src="images/blipbug.png" alt="" width="160px" class="card-img">
+                    </div>
+                </div>
+
+                <div class="card-content">
+                    <h2 class="name">Juan Pablo Herrera</h2>
+                    <p class="description"><br> Teroloco</p>
+                    <p class="description"><strong><u><br><br> Profesor de WEB1</u></strong></p>
+                </div>
+            </div>
+            <div class="card swiper-slide">
+                <div class="image-content">
+                    <span class="overlay"></span>
+
+                    <div class="card-image">
                         <img src="images/umbreon.png" alt="" width="155px" class="card-img">
                     </div>
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Lau. Ibañez</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Lautaro Ibañez</h2>
+                    <p class="description">No bitches? <br><br></p>
 
-                    <button id="um" class="button">View More</button>
+                    <button id="um" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -40,10 +55,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Isa</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Isabella San Martin</h2>
+                    <p class="description">*la seduce* <br><br></p>
 
-                    <button id="syl" class="button">View More</button>
+                    <button id="syl" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -51,15 +66,15 @@
                     <span class="overlay"></span>
 
                     <div class="card-image">
-                        <img src="images/ralts.png" alt="" width="160px" class="card-img">
+                        <img src="images/dialga.png" alt="" width="160px" class="card-img">
                     </div>
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Sah</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Sahir Jofre</h2>
+                    <p class="description">Lo siento señora Jackson <br><br></p>
 
-                    <button id="ral" class="button">View More</button>
+                    <button id="ral" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -72,10 +87,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Dul</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Dulce Ana Vigna Coronel</h2>
+                    <p class="description">Holi <br><br></p>
 
-                    <button id="es" class="button">View More</button>
+                    <button id="es" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -83,15 +98,15 @@
                     <span class="overlay"></span>
 
                     <div class="card-image">
-                        <img src="images/dragonite.png" alt="" width="180px" class="card-img">
+                        <img src="images/zapdos.png" alt="" width="150px" class="card-img">
                     </div>
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Santy</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Santiago Valenza</h2>
+                    <p class="description">Ojo con los doble capa <br><br></p>
 
-                    <button id="dra" class="button">View More</button>
+                    <button id="dra" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -104,10 +119,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Lau. Maidana</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Lautaro Maidana</h2>
+                    <p class="description">MONDONGO <br><br></p>
 
-                    <button id="sla" class="button">View More</button>
+                    <button id="sla" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -120,10 +135,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Vice</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Vicente Sastre</h2>
+                    <p class="description">Aguante la Coca-cola <br><br></p>
 
-                    <button id="pika" class="button">View More</button>
+                    <button id="pika" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -136,10 +151,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Cande</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Candela Parra</h2>
+                    <p class="description">Tilina <br><br></p>
 
-                    <button id="mien" class="button">View More</button>
+                    <button id="mien" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -152,10 +167,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Lucas</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Lucas Lara</h2>
+                    <p class="description">Tilín <br><br></p>
 
-                    <button id="rab" class="button">View More</button>
+                    <button id="rab" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -168,10 +183,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Mirko</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Mirko Picazo</h2>
+                    <p class="description">Taylor's Version <br><br></p>
 
-                    <button id="art" class="button">View More</button>
+                    <button id="art" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -184,10 +199,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Juli</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Julieta Ledesma</h2>
+                    <p class="description">._. <br><br></p>
 
-                    <button id="slu" class="button">View More</button>
+                    <button id="slu" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -200,10 +215,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Lau. Morales</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Lautaro Morales</h2>
+                    <p class="description">Lo hice sentir un fracasado y no fue su culpa, perdon papá</p>
 
-                    <button id="tor" class="button">View More</button>
+                    <button id="tor" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -211,15 +226,15 @@
                     <span class="overlay"></span>
 
                     <div class="card-image">
-                        <img src="images/azelf.png" alt="" width="160px" class="card-img">
+                        <img src="images/zigzagoon.png" alt="" width="160px" class="card-img">
                     </div>
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Joaco</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Joaquin Uribe</h2>
+                    <p class="description">... <br><br></p>
 
-                    <button id="az" class="button">View More</button>
+                    <button id="az" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -227,15 +242,15 @@
                     <span class="overlay"></span>
 
                     <div class="card-image">
-                        <img src="images/colagrito.png" alt="" width="150px" class="card-img">
+                        <img src="images/snubbull.png" alt="" width="170px" class="card-img">
                     </div>
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Ainy</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Ainara Parra</h2>
+                    <p class="description">Tengo sabor a mandarina <br><br></p>
 
-                    <button id="col" class="button">View More</button>
+                    <button id="col" class="button">Code</button>
                 </div>
             </div>
             <div class="card swiper-slide">
@@ -248,10 +263,10 @@
                 </div>
 
                 <div class="card-content">
-                    <h2 class="name">Agus</h2>
-                    <p class="description">pipipi</p>
+                    <h2 class="name">Agustina Perticarini</h2>
+                    <p class="description">Do Re Mi Fa Sol<br><br></p>
 
-                    <button id="lux" class="button">View More</button>
+                    <button id="lux" class="button">Code</button>
                 </div>
             </div>
            </div>
